--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/logoBg.png" />
+    <link rel="icon" type="image/svg+xml" href="public/assets/images/hero_exium.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="HRMS, solusi HRD terlengkap untuk mengelola karyawan dengan lebih mudah, cepat, dan efisien. Dari absensi, penggajian, hingga evaluasi kinerja, semua dalam satu platform intuitif yang fleksibel untuk meningkatkan produktivitas bisnis Anda">
+    <meta name="keywords" content="HRMS, human resource management, HR software, employee management, HRD, human resource, solusi, solusiHRD, solusi hrd">
+    <meta property="og:title" content="HRMS by Exium Solusi HRD Management">
+    <meta property="og:description" content="HRMS by Exium is a Human Resource Management System for efficient HR management.">
+    <meta property="og:image" content="public/assets/images/hero_exium.png">
+    <meta property="og:url" content="https://www.solusihrd.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="HRMS by Exium">
+    <meta name="twitter:description" content="Manage HR processes with Exium's HRMS software.">
+    <meta name="twitter:image" content="public/assets/images/hero_exium.png">
 
     <title>HRMS by Exium™</title>
   </head>
